--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -1,7 +1,7 @@
 Historic Effects on Character Options
 Because this is the 10th century in the setting, certain character options are different.
 
-- Maho and the Shadowlands Taint
+- Maho
 
 - Togashi Tattooed Order (pages 115-116): The Crane tattoo, Hawk tattoo, Ki-Rin tattoo, Scorpion Tattoo and Wolf tattoo
 can be activated a number of times per day equal to the ise zumi's school rank. All the tattoos are so large that they can
